// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form elements form success message 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-uliqdc"
      >
        <div
          class="css-16jncbj"
        >
          test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`form elements form success title 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-uliqdc"
      >
        <div
          aria-level="1"
          class="css-1jbmnp7"
          role="heading"
        >
          <div
            class="css-dhd2g"
          >
            hi
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkbox field 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="css-uliqdc"
        >
          <div
            class="field-container css-1n0hpos"
          >
            <label
              class="is-default css-knfhfe"
            >
              <div
                class="css-vurnku"
              >
                <input
                  aria-checked="false"
                  class="css-xyotvu"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="is-default css-1orewpb"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="is-default css-6gju6b"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              Label
            </label>
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkboxes field 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-1n0hpos"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                foo
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-1n0hpos"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                bar
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-1n0hpos"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                fuzz
              </label>
            </div>
          </div>
          <div
            class="css-uliqdc"
          >
            <div
              class="field-container css-1n0hpos"
            >
              <label
                class="is-default css-knfhfe"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1orewpb"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-6gju6b"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                qux
              </label>
            </div>
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields password field 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default css-uliqdc"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default css-vhv7r1"
              type="button"
            >
              <span
                class="css-uliqdc"
              >
                <div
                  class="css-vurnku"
                >
                  Select an option
                </div>
              </span>
              <span
                aria-hidden="true"
                class="css-uliqdc"
              >
                <svg
                  class="mdi-icon css-1bcbcdi"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field with default 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default css-uliqdc"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default css-vhv7r1"
              type="button"
            >
              <span
                class="css-uliqdc"
              >
                <div
                  class="css-vurnku"
                >
                  Select an option
                </div>
              </span>
              <span
                aria-hidden="true"
                class="css-uliqdc"
              >
                <svg
                  class="mdi-icon css-1bcbcdi"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format email 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format uri 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field regular 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with custom errors as sentence 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-error css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-error css-uliqdc"
          >
            <input
              class="is-error css-4y926w"
              value=""
            />
          </div>
          <div
            class="is-error css-hnfg90"
            role="status"
          >
            Should be string, Blah
          </div>
        </div>
        <button
          class="is-focused css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with help text 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              value=""
            />
          </div>
          <div
            class="is-default css-hnfg90"
            role="status"
          >
            help text
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with markdown errors 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Test
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with placeholder 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <input
              class="is-default css-4y926w"
              placeholder="placeholder"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields textarea field 1`] = `
<DocumentFragment>
  <div
    class="css-1lfxxz2-PageWrapper css-uliqdc"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-1n0hpos"
          rows="2"
        >
          <label
            class="is-default css-knfhfe"
          >
            Label
          </label>
          <div
            class="is-default css-uliqdc"
          >
            <textarea
              class="is-default css-4y926w"
              rows="2"
            />
          </div>
        </div>
        <button
          class=" css-vhv7r1"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
